<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">AndroidTraining</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">send</string>
    <string name="article_fragment">This is Article Fragment</string>
    <string name="head">head</string>
    <string name="headlines_fragment">This is Headlines Fragment</string>
    <string name="dial">dial</string>
    <string name="map">Map</string>
    <string name="share">分享应用至</string>
    <string name="calendar">Calendar</string>
    <string name="contact">Contact</string>
    <string name="send">Send</string>
    <string name="permission">Permission</string>
    <string name="show_result">show result</string>
    <string name="take_photo">拍照</string>
    <string name="record_video">录制视频</string>
    <string name="camera">camera</string>
    <string name="fragment">fragment</string>
    <string name="intent">intent</string>
    <string name="transition">transition</string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem
        Ipsum</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="animations">animations</string>

    <string name="title_crossfade">Simple Crossfade</string>
    <string name="title_card_flip">Card Flip</string>
    <string name="title_screen_slide">Screen Slide</string>
    <string name="title_zoom">Zoom</string>
    <string name="title_layout_changes">Layout Changes</string>
    <!-- Actions -->
    <string name="action_toggle">Toggle indicator</string>
    <string name="action_add_item">Add item</string>
    <string name="action_remove_item">Remove item</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>

    <!-- Messages -->
    <string name="message_empty_layout_changes">Add an item above to get started.</string>
    <string name="message_zoom_touch_expand">Touch a photo to expand it.</string>

    <!-- Accessibility-only descriptions -->
    <string name="description_image_1">Image 1</string>
    <string name="description_image_2">Image 2</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>

    <!-- Other strings -->
    <string name="card_back_title">Angry Red Android</string>
    <string name="card_back_description"><![CDATA[Lorem ipsum dolor sit]]></string>
    <string name="flip_card">flip card</string>
    <string name="zoom_image">Zoom image</string>

    <!--  Buttons -->
    <string name="ping">Ping!</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>

    <!--  Text Views -->

    <string name="ping_text">Set Seconds Until Ping</string>
    <string name="done_snoozing">Done Snoozing.</string>
    <string name="seconds_default">10</string>
    <string name="reminder_label">Reminder Text</string>
    <string name="reminder_text">Don\'t forget!</string>

    <!--  Logging -->

    <string name="snoozing">Snoozing!</string>
    <string name="timer_start">Setting the timer</string>
    <string name="sleep_error">Sleep failure</string>
    <string name="timer_finished">Timer finished.</string>
    <string name="notification">Ping Notification</string>
    <string name="notify">notify</string>
    <string name="refresh">refresh</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search something</string>
    <string name="change_config">change config</string>
    <string name="recycler_view">recyclerview</string>
    <string name="custom_view">custom view</string>
    <string name="favorite">favorite</string>
    <string name="settings">settings</string>
    <string name="appbar">appbar</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid lat long used</string>
    <string name="no_address_found">no address found</string>
    <string name="address_found">address found</string>
    <string name="permission_denied">Permission denied</string>
    <string name="no_geocoder_available">no geocoder available</string>
    <string name="location">location</string>
    <string name="gps_location">gps location</string>
    <string name="image">image</string>
    <string name="palette">palette</string>
    <string name="file">file</string>

</resources>
